# python-squ

./: README.md  pyproject.toml
.devcontainer/: devcontainer.json
.github/: dependabot.yml
examples/: export-analyticsrules.py
python_squ/: azcli.py  sentinel_beautify.py
squ/: __init__.py  api.py  azcli.py  sentinel_beautify.py
tests/: test_python_squ.py
