[tool.black]
line-length = 100
skip-magic-trailing-comma = true
preview = true

[tool.ruff]
line-length = 120

[tool.poetry]
name = "squ"
version = "1.0.5"
description = ""
authors = ["Adon Metcalfe <adonm@fastmail.fm>"]
readme = "README.md"
packages = [{ include = "squ" }]

[tool.poetry.dependencies]
python = "^3.10"
cacheout = "^0.14.1"
markdown = "^3.4.1"
flatten-json = "^0.1.13"
pathvalidate = "^2.5.2"
httpx-cache = "^0.7.0"
python-dotenv = "^0.21.1"
python-dateutil = "^2.8.2"
httpx = "^0.23.3"
pandas = "^1.5.3"
requests = "^2.28.2"
pyarrow = "^11.0.0"
pip = "^23.0.1"
universal-pathlib = "^0.0.21"
adlfs = "^2023.1.0"
azure-kusto-data = "^4.1.2"
azure-cli = "^2.45.0"
setuptools = "^67.5.1"
atlassian-python-api = "^3.34.0"
abuseipdb-wrapper = "^0.1.7"

[tool.poetry.group.dev.dependencies]
black = { version = "^22.12.0", allow-prereleases = true }
pytest = "^7.2.2"
poetry = "^1.4.0"
poetry-plugin-up = "^0.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
